force-app/main/default/objects/Shelter__c/fields/Adopted_Animal_Count__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Animal_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adopted Animal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>