force-app/main/default/objects/Shelter__c/fields/Current_Animal_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Animal_Count__c</fullName>
    <label>Current Animal Count</label>
    <summaryForeignKey>Animal__c.Shelter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>