force-app/main/default/objects/Shelter__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>