force-app/main/default/objects/Shelter__c/fields/Unadopted_Animal_Count__c.field-meta.xml
<CustomField>
    <fullName>Unadopted_Animal_Count__c</fullName>
    <label>Unadopted Animal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>