force-app/main/default/objects/Shelter__c/recordTypes/Shelter_RT.recordType-meta.xml
<RecordType>
    <fullName>Shelter_RT</fullName>
    <active>true</active>
    <label>Shelter RT</label>
</RecordType>