force-app/main/default/objects/Shelter__c/validationRules/Require_Address_For_Shelter.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Address_For_Shelter</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK( Address__City__s ),
ISBLANK( Address__Street__s ),
ISBLANK( Address__PostalCode__s )
)</errorConditionFormula>
    <errorMessage>Provide proper address for shelter!</errorMessage>
</ValidationRule>